# ADLLM

./: .gitignore  README.md  alignment.py  alignment_eval.py  classes.py  evaluation.py  inference.py  main.py  model.py  processor.py  prompts.py  pyproject.toml  requirements.txt  ruff.toml  scratch-ollama.ipynb  scratch.ipynb  test.py  utils.py  video_utils.py
evaluations/: evaluation_2024_11_18.ipynb  evaluation_2024_11_19.ipynb  evaluation_2024_11_19.py
examples/: batch_example.ipynb  single_video_example.ipynb  step_by_step.ipynb
manual_evaluater/: main.py
