[project]
name = "adllm"
version = "0.1.0"
description = "Package for video ADL tagging using multimodal large language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes==0.42.0",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "ollama",
    "opencv-python",
    "peft",
    "pillow",
    "polars",
    "requests",
    "safetensors",
    "scikit-learn",
    "seaborn",
    "streamlit",
    "torch",
    "transformers",
    "wordcloud>=1.9.4",
]
