[project]
name = "adllm"
version = "0.1.0"
description = "Package for video ADL tagging using multimodal large language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes==0.42.0",
    "huggingface-hub",
    "ipykernel>=6.29.5",
    "matplotlib",
    "numpy",
    "ollama",
    "opencv-python",
    "peft",
    "pillow",
    "polars",
    "requests",
    "safetensors",
    "scikit-learn",
    "seaborn",
    "streamlit",
    "torch",
    "transformers",
    "wordcloud>=1.9.4",
]

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I001"]
extend-select = ["E501"]
ignore = []
fixable = ["ALL"]
unfixable = []
